--- a/templates/backup/backup.html
+++ b/templates/backup/backup.html
@@ -15,11 +15,12 @@
 	{% include "backup/_retention_settings.html" %}
 	</div>
 
-  <!-- Restore & db size -->
+  <!-- Restore & import -->
 	<div class="grid grid-cols-1 xl:grid-cols-2 gap-6">
 	  {% include "backup/_restore_upload.html" %}
-	  {% include "backup/_db_size.html" %}
+	  {% include "backup/_tautulli_import.html" %}
 	</div>
+
 
 
 </div>
